fixing text wrap in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    clear: both;
+    /* clear: both; */
     margin: auto;
     padding: 20px;
     width: 960px;
